--- a/src/styles/ProgressBar.css
+++ b/src/styles/ProgressBar.css
@@ -1,25 +1,25 @@
-
 .progress-bar-container {
     width: 100%;
     background-color: #e0e0e0;
     border-radius: 4px;
-    height: 10px;
+    height: 20px;
+    overflow: hidden;
 }
 
-.progress-bar {
+.progress-bar-filler {
     height: 100%;
-    border-radius: 4px;
     transition: width 0.5s ease-in-out;
+    border-radius: 4px;
 }
 
-.progress-bar.green {
+.progress-bar-filler.green {
     background-color: #4caf50;
 }
 
-.progress-bar.yellow {
+.progress-bar-filler.yellow {
     background-color: #ffeb3b;
 }
 
-.progress-bar.red {
+.progress-bar-filler.red {
     background-color: #f44336;
 }
