--- a/src/styles/Summary.css
+++ b/src/styles/Summary.css
@@ -1,9 +1,21 @@
+.summary-container {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin-bottom: 30px;
+}
 
-.summary-card {
+.summary-day-card {
+    flex: 1;
+    padding: 15px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    padding: 1rem;
     text-align: center;
-    width: 18%;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.ocupation-text {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 10px 0;
 }
